mobilerobotics_ws/log/build_2023-11-27_15-04-23/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 75
    self.max_x = max(root.x, [o.x for o in self.obs]*, ball.x, goal.x)
                                                     ^
SyntaxError: invalid syntax

